[metadata]
name = wphelper
summary = Tools for working with WordPress as a blog author.
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://pypi.python.org/pypi/wphelper
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Communications

[files]
packages =
    wphelper

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
